// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template snapshots > advanced template output matches snapshot 1`] = `
{
  ".agnix.toml": "# agnix configuration — validates CLAUDE.md, hooks, skills, and agent configs.
# Reference: https://agent-sh.github.io/agnix/docs/configuration
#
# Harness runs this config via \`harness validate --agent-configs\` (hybrid mode):
#   - If the \`agnix\` binary is on PATH, harness shells out to it (385+ rules).
#   - Otherwise, harness runs a built-in fallback rule set covering the
#     highest-value checks (CLAUDE.md size, invalid hooks, unreachable skills).
# Install agnix for the full rule catalogue: \`cargo install agnix-cli\`.

target = "claude-code"
strict = false
max_files = 10000
locale = "en"

[rules]
disabled_rules = []
",
  ".gitignore": "node_modules/
dist/
.env
.env.local
*.log
coverage/
.turbo/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test — A project using Harness Engineering practices (advanced adoption level).

## Documentation

- Main docs: \`docs/\`
- Architecture decisions: \`docs/architecture.md\`

## Source Code

- Entry point: \`src/index.ts\`

## Architecture

See \`docs/architecture.md\` for architectural decisions.
",
  "agents/personas/.gitkeep": "",
  "docs/changes/.gitkeep": "",
  "docs/index.md": "# snapshot-test Documentation

Welcome to the snapshot-test documentation.

## Getting Started

1. Install dependencies: \`npm install\`
2. Run checks: \`npx harness validate\`
3. Start development

## Architecture

See [architecture.md](./architecture.md) for architectural decisions.
",
  "docs/principles.md": "# snapshot-test Principles

## Code Quality
- TODO: Define your code quality principles

## Architecture
- TODO: Define your architectural principles

## Testing
- TODO: Define your testing approach

## Design
- TODO: Define your design principles
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "layers": [
    {
      "name": "types",
      "pattern": "src/types/**",
      "allowedDependencies": []
    },
    {
      "name": "domain",
      "pattern": "src/domain/**",
      "allowedDependencies": [
        "types"
      ]
    },
    {
      "name": "services",
      "pattern": "src/services/**",
      "allowedDependencies": [
        "types",
        "domain"
      ]
    },
    {
      "name": "api",
      "pattern": "src/api/**",
      "allowedDependencies": [
        "types",
        "domain",
        "services"
      ]
    }
  ],
  "forbiddenImports": [
    {
      "from": "src/types/**",
      "disallow": [
        "src/services/**",
        "src/api/**"
      ],
      "message": "Types layer cannot import from services or API"
    }
  ],
  "boundaries": {
    "requireSchema": [
      "src/api/**"
    ]
  },
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "agent": {
    "executor": "subprocess",
    "timeout": 300000
  },
  "entropy": {
    "excludePatterns": [
      "**/node_modules/**",
      "**/*.test.ts"
    ],
    "autoFix": false
  },
  "template": {
    "level": "advanced",
    "version": 1
  }
}",
  "package.json": "{
  "name": "snapshot-test",
  "version": "1.0.0",
  "type": "module",
  "scripts": {
    "build": "tsc",
    "lint": "eslint src",
    "harness:validate": "harness validate",
    "harness:check-deps": "harness check-deps",
    "harness:check-docs": "harness check-docs",
    "harness:cleanup": "harness cleanup",
    "harness:fix-drift": "harness fix-drift"
  },
  "dependencies": {},
  "devDependencies": {
    "@harness-engineering/cli": "^0.1.0",
    "@harness-engineering/eslint-plugin": "^0.1.0",
    "eslint": "^9.0.0",
    "typescript": "^5.0.0"
  }
}",
}
`;

exports[`template snapshots > axum overlay with rust-base matches snapshot 1`] = `
{
  ".gitignore": "/target/
.env
.env.local
*.log

# IDE
.idea/
.vscode/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test -- A Rust project managed with Harness Engineering practices.

## Language & Tooling

- **Language:** Rust (edition 2021)
- **Package manager:** Cargo
- **Linter:** Clippy
- **Formatter:** rustfmt
- **Test runner:** cargo test

## Directory Structure

- \`src/main.rs\` -- Application entry point
- \`src/lib.rs\` -- Library root (when applicable)
- \`Cargo.toml\` -- Package manifest and dependencies
- \`tests/\` -- Integration tests

## Conventions

- Follow Rust API guidelines
- Use \`rustfmt\` for formatting
- Run \`cargo clippy\` before committing
- Tests: unit tests in \`#[cfg(test)]\` modules, integration tests in \`tests/\`
- Error handling: use \`Result<T, E>\` and the \`?\` operator, avoid \`.unwrap()\` in production code

## Harness Skills

- Use \`harness-brainstorming\` for design exploration
- Use \`harness-planning\` to break features into atomic tasks
- Use \`harness-execution\` to implement tasks with TDD
- Refer to \`harness.config.json\` for project tooling configuration
",
  "Cargo.toml": "[package]
name = "snapshot-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
",
  "clippy.toml": "cognitive-complexity-threshold = 25
too-many-arguments-threshold = 7
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "language": "rust",
    "version": 1
  },
  "tooling": {
    "packageManager": "cargo",
    "linter": "clippy",
    "formatter": "rustfmt",
    "buildTool": "cargo",
    "testRunner": "cargo test"
  }
}",
  "src/main.rs": "use axum::{routing::get, Router};

async fn root() -> &'static str {
    "Hello, world!"
}

#[tokio::main]
async fn main() {
    let app = Router::new().route("/", get(root));
    let listener = tokio::net::TcpListener::bind("127.0.0.1:3000").await.unwrap();
    axum::serve(listener, app).await.unwrap();
}
",
}
`;

exports[`template snapshots > basic template output matches snapshot 1`] = `
{
  ".agnix.toml": "# agnix configuration — validates CLAUDE.md, hooks, skills, and agent configs.
# Reference: https://agent-sh.github.io/agnix/docs/configuration
#
# Harness runs this config via \`harness validate --agent-configs\` (hybrid mode):
#   - If the \`agnix\` binary is on PATH, harness shells out to it (385+ rules).
#   - Otherwise, harness runs a built-in fallback rule set covering the
#     highest-value checks (CLAUDE.md size, invalid hooks, unreachable skills).
# Install agnix for the full rule catalogue: \`cargo install agnix-cli\`.

target = "claude-code"
strict = false
max_files = 10000
locale = "en"

[rules]
disabled_rules = []
",
  ".gitignore": "node_modules/
dist/
.env
.env.local
*.log
coverage/
.turbo/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test — A project using Harness Engineering practices (basic adoption level).

## Documentation

- Main docs: \`docs/\`
- Architecture decisions: \`docs/architecture.md\`

## Source Code

- Entry point: \`src/index.ts\`

## Architecture

See \`docs/architecture.md\` for architectural decisions.
",
  "docs/index.md": "# snapshot-test Documentation

Welcome to the snapshot-test documentation.

## Getting Started

1. Install dependencies: \`npm install\`
2. Run checks: \`npx harness validate\`
3. Start development

## Architecture

See [architecture.md](./architecture.md) for architectural decisions.
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "layers": [
    {
      "name": "types",
      "pattern": "src/types/**",
      "allowedDependencies": []
    },
    {
      "name": "domain",
      "pattern": "src/domain/**",
      "allowedDependencies": [
        "types"
      ]
    },
    {
      "name": "services",
      "pattern": "src/services/**",
      "allowedDependencies": [
        "types",
        "domain"
      ]
    },
    {
      "name": "api",
      "pattern": "src/api/**",
      "allowedDependencies": [
        "types",
        "domain",
        "services"
      ]
    }
  ],
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "level": "basic",
    "version": 1
  }
}",
  "package.json": "{
  "name": "snapshot-test",
  "version": "1.0.0",
  "type": "module",
  "scripts": {
    "build": "tsc",
    "harness:validate": "harness validate",
    "harness:check-deps": "harness check-deps"
  },
  "dependencies": {},
  "devDependencies": {
    "@harness-engineering/cli": "^0.1.0",
    "typescript": "^5.0.0"
  }
}",
  "src/index.ts": "export {};
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2022",
    "module": "Node16",
    "moduleResolution": "Node16",
    "outDir": "dist",
    "rootDir": "src",
    "strict": true,
    "esModuleInterop": true,
    "declaration": true
  },
  "include": ["src"]
}
",
}
`;

exports[`template snapshots > django overlay with python-base matches snapshot 1`] = `
{
  ".gitignore": "__pycache__/
*.py[cod]
*$py.class
.venv/
venv/
env/
.env
.env.local
dist/
build/
*.egg-info/
.pytest_cache/
.ruff_cache/
.mypy_cache/
*.log
",
  ".python-version": "3.10
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test -- A Python project managed with Harness Engineering practices.

## Language & Tooling

- **Language:** Python (>=3.10)
- **Linter/Formatter:** Ruff
- **Test runner:** pytest
- **Package manager:** pip

## Directory Structure

- \`src/\` -- Application source code
- \`tests/\` -- Test files (pytest)
- \`pyproject.toml\` -- Project metadata and dependencies

## Conventions

- Follow PEP 8 style (enforced by Ruff)
- Use type hints for function signatures
- Tests live in \`tests/\` and mirror \`src/\` structure
- Import sorting managed by Ruff (isort rules)

## Harness Skills

- Use \`harness-brainstorming\` for design exploration
- Use \`harness-planning\` to break features into atomic tasks
- Use \`harness-execution\` to implement tasks with TDD
- Refer to \`harness.config.json\` for project tooling configuration
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "language": "python",
    "version": 1
  },
  "tooling": {
    "packageManager": "pip",
    "linter": "ruff",
    "formatter": "ruff",
    "testRunner": "pytest"
  }
}",
  "manage.py": "#!/usr/bin/env python
"""Django's command-line utility for administrative tasks."""
import os
import sys


def main():
    os.environ.setdefault("DJANGO_SETTINGS_MODULE", "snapshot-test.settings")
    try:
        from django.core.management import execute_from_command_line
    except ImportError as exc:
        raise ImportError(
            "Couldn't import Django. Are you sure it's installed?"
        ) from exc
    execute_from_command_line(sys.argv)


if __name__ == "__main__":
    main()
",
  "pyproject.toml": "[project]
name = "snapshot-test"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
",
  "requirements.txt": "django>=4.2
",
  "ruff.toml": "line-length = 88
target-version = "py310"

[lint]
select = ["E", "F", "I", "N", "W", "UP"]
",
  "src/__init__.py": "",
  "src/settings.py": """"Django settings for snapshot-test project."""

import os
from pathlib import Path

BASE_DIR = Path(__file__).resolve().parent.parent

SECRET_KEY = os.environ.get("DJANGO_SECRET_KEY", "dev-only-insecure-key-change-in-production")

DEBUG = True

ALLOWED_HOSTS = []

INSTALLED_APPS = [
    "django.contrib.admin",
    "django.contrib.auth",
    "django.contrib.contenttypes",
    "django.contrib.sessions",
    "django.contrib.messages",
    "django.contrib.staticfiles",
]

MIDDLEWARE = [
    "django.middleware.security.SecurityMiddleware",
    "django.contrib.sessions.middleware.SessionMiddleware",
    "django.middleware.common.CommonMiddleware",
    "django.middleware.csrf.CsrfViewMiddleware",
    "django.contrib.auth.middleware.AuthenticationMiddleware",
    "django.contrib.messages.middleware.MessageMiddleware",
    "django.middleware.clickjacking.XFrameOptionsMiddleware",
]

ROOT_URLCONF = "snapshot-test.urls"

WSGI_APPLICATION = "snapshot-test.wsgi.application"

DATABASES = {
    "default": {
        "ENGINE": "django.db.backends.sqlite3",
        "NAME": BASE_DIR / "db.sqlite3",
    }
}

DEFAULT_AUTO_FIELD = "django.db.models.BigAutoField"
",
  "src/urls.py": "from django.contrib import admin
from django.urls import path

urlpatterns = [
    path("admin/", admin.site.urls),
]
",
  "src/wsgi.py": """"WSGI config for snapshot-test project."""

import os

from django.core.wsgi import get_wsgi_application

os.environ.setdefault("DJANGO_SETTINGS_MODULE", "snapshot-test.settings")

application = get_wsgi_application()
",
}
`;

exports[`template snapshots > express overlay with basic level matches snapshot 1`] = `
{
  ".agnix.toml": "# agnix configuration — validates CLAUDE.md, hooks, skills, and agent configs.
# Reference: https://agent-sh.github.io/agnix/docs/configuration
#
# Harness runs this config via \`harness validate --agent-configs\` (hybrid mode):
#   - If the \`agnix\` binary is on PATH, harness shells out to it (385+ rules).
#   - Otherwise, harness runs a built-in fallback rule set covering the
#     highest-value checks (CLAUDE.md size, invalid hooks, unreachable skills).
# Install agnix for the full rule catalogue: \`cargo install agnix-cli\`.

target = "claude-code"
strict = false
max_files = 10000
locale = "en"

[rules]
disabled_rules = []
",
  ".gitignore": "node_modules/
dist/
.env
.env.local
*.log
coverage/
.turbo/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test — A project using Harness Engineering practices (basic adoption level).

## Documentation

- Main docs: \`docs/\`
- Architecture decisions: \`docs/architecture.md\`

## Source Code

- Entry point: \`src/index.ts\`

## Architecture

See \`docs/architecture.md\` for architectural decisions.
",
  "docs/index.md": "# snapshot-test Documentation

Welcome to the snapshot-test documentation.

## Getting Started

1. Install dependencies: \`npm install\`
2. Run checks: \`npx harness validate\`
3. Start development

## Architecture

See [architecture.md](./architecture.md) for architectural decisions.
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "layers": [
    {
      "name": "types",
      "pattern": "src/types/**",
      "allowedDependencies": []
    },
    {
      "name": "domain",
      "pattern": "src/domain/**",
      "allowedDependencies": [
        "types"
      ]
    },
    {
      "name": "services",
      "pattern": "src/services/**",
      "allowedDependencies": [
        "types",
        "domain"
      ]
    },
    {
      "name": "api",
      "pattern": "src/api/**",
      "allowedDependencies": [
        "types",
        "domain",
        "services"
      ]
    }
  ],
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "level": "basic",
    "version": 1
  }
}",
  "package.json": "{
  "name": "snapshot-test",
  "version": "1.0.0",
  "type": "module",
  "scripts": {
    "build": "tsc",
    "harness:validate": "harness validate",
    "harness:check-deps": "harness check-deps",
    "dev": "tsx watch src/app.ts",
    "start": "node dist/app.js"
  },
  "dependencies": {
    "express": "^4.0.0"
  },
  "devDependencies": {
    "@harness-engineering/cli": "^0.1.0",
    "typescript": "^5.0.0",
    "@types/express": "^4.0.0",
    "tsx": "^4.0.0"
  }
}",
  "src/app.ts": "import express from 'express';

const app = express();
const port = process.env.PORT || 3000;

app.get('/', (_req, res) => {
  res.json({ message: 'Welcome to your Harness Engineering project' });
});

app.listen(port, () => {
  console.log(\`Server running on port \${port}\`);
});
",
  "src/index.ts": "export {};
",
  "src/lib/.gitkeep": "",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2022",
    "module": "Node16",
    "moduleResolution": "Node16",
    "outDir": "dist",
    "rootDir": "src",
    "strict": true,
    "esModuleInterop": true,
    "declaration": true
  },
  "include": ["src"]
}
",
}
`;

exports[`template snapshots > fastapi overlay with python-base matches snapshot 1`] = `
{
  ".gitignore": "__pycache__/
*.py[cod]
*$py.class
.venv/
venv/
env/
.env
.env.local
dist/
build/
*.egg-info/
.pytest_cache/
.ruff_cache/
.mypy_cache/
*.log
",
  ".python-version": "3.10
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test -- A Python project managed with Harness Engineering practices.

## Language & Tooling

- **Language:** Python (>=3.10)
- **Linter/Formatter:** Ruff
- **Test runner:** pytest
- **Package manager:** pip

## Directory Structure

- \`src/\` -- Application source code
- \`tests/\` -- Test files (pytest)
- \`pyproject.toml\` -- Project metadata and dependencies

## Conventions

- Follow PEP 8 style (enforced by Ruff)
- Use type hints for function signatures
- Tests live in \`tests/\` and mirror \`src/\` structure
- Import sorting managed by Ruff (isort rules)

## Harness Skills

- Use \`harness-brainstorming\` for design exploration
- Use \`harness-planning\` to break features into atomic tasks
- Use \`harness-execution\` to implement tasks with TDD
- Refer to \`harness.config.json\` for project tooling configuration
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "language": "python",
    "version": 1
  },
  "tooling": {
    "packageManager": "pip",
    "linter": "ruff",
    "formatter": "ruff",
    "testRunner": "pytest"
  }
}",
  "pyproject.toml": "[project]
name = "snapshot-test"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
",
  "requirements.txt": "fastapi>=0.100.0
uvicorn[standard]>=0.23.0
",
  "ruff.toml": "line-length = 88
target-version = "py310"

[lint]
select = ["E", "F", "I", "N", "W", "UP"]
",
  "src/__init__.py": "",
  "src/main.py": "from fastapi import FastAPI

app = FastAPI()


@app.get("/")
async def root():
    return {"message": "Hello, world!"}
",
}
`;

exports[`template snapshots > gin overlay with go-base matches snapshot 1`] = `
{
  ".gitignore": "# Binaries
*.exe
*.exe~
*.dll
*.so
*.dylib

# Test binary
*.test

# Output
*.out
/bin/
/dist/

# Environment
.env
.env.local

# IDE
.idea/
.vscode/

# Go
vendor/
",
  ".golangci.yml": "linters:
  enable:
    - errcheck
    - govet
    - staticcheck
    - unused
    - gosimple
    - ineffassign
  disable:
    - depguard

run:
  timeout: 5m

issues:
  max-issues-per-linter: 50
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test -- A Go project managed with Harness Engineering practices.

## Language & Tooling

- **Language:** Go
- **Module:** github.com/example/snapshot-test
- **Linter:** golangci-lint
- **Formatter:** gofmt
- **Test runner:** go test

## Directory Structure

- \`main.go\` -- Application entry point
- \`go.mod\` -- Module definition and dependencies
- \`internal/\` -- Private application packages (by convention)
- \`pkg/\` -- Public library packages (by convention)

## Conventions

- Follow Effective Go guidelines
- Use \`gofmt\` for formatting (enforced by golangci-lint)
- Tests live alongside source files as \`_test.go\` suffix
- Error handling: always check returned errors, never discard
- Package names are lowercase, single-word, no underscores

## Harness Skills

- Use \`harness-brainstorming\` for design exploration
- Use \`harness-planning\` to break features into atomic tasks
- Use \`harness-execution\` to implement tasks with TDD
- Refer to \`harness.config.json\` for project tooling configuration
",
  "go.mod": "module github.com/example/snapshot-test

go 1.21

require github.com/gin-gonic/gin v1.9.1
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "language": "go",
    "version": 1
  },
  "tooling": {
    "packageManager": "go",
    "linter": "golangci-lint",
    "formatter": "gofmt",
    "buildTool": "go",
    "testRunner": "go test"
  }
}",
  "main.go": "package main

import (
	"net/http"

	"github.com/gin-gonic/gin"
)

func main() {
	r := gin.Default()
	r.GET("/", func(c *gin.Context) {
		c.JSON(http.StatusOK, gin.H{"message": "Hello, world!"})
	})
	r.Run(":8080")
}
",
}
`;

exports[`template snapshots > go-base template output matches snapshot 1`] = `
{
  ".gitignore": "# Binaries
*.exe
*.exe~
*.dll
*.so
*.dylib

# Test binary
*.test

# Output
*.out
/bin/
/dist/

# Environment
.env
.env.local

# IDE
.idea/
.vscode/

# Go
vendor/
",
  ".golangci.yml": "linters:
  enable:
    - errcheck
    - govet
    - staticcheck
    - unused
    - gosimple
    - ineffassign
  disable:
    - depguard

run:
  timeout: 5m

issues:
  max-issues-per-linter: 50
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test -- A Go project managed with Harness Engineering practices.

## Language & Tooling

- **Language:** Go
- **Module:** github.com/example/snapshot-test
- **Linter:** golangci-lint
- **Formatter:** gofmt
- **Test runner:** go test

## Directory Structure

- \`main.go\` -- Application entry point
- \`go.mod\` -- Module definition and dependencies
- \`internal/\` -- Private application packages (by convention)
- \`pkg/\` -- Public library packages (by convention)

## Conventions

- Follow Effective Go guidelines
- Use \`gofmt\` for formatting (enforced by golangci-lint)
- Tests live alongside source files as \`_test.go\` suffix
- Error handling: always check returned errors, never discard
- Package names are lowercase, single-word, no underscores

## Harness Skills

- Use \`harness-brainstorming\` for design exploration
- Use \`harness-planning\` to break features into atomic tasks
- Use \`harness-execution\` to implement tasks with TDD
- Refer to \`harness.config.json\` for project tooling configuration
",
  "go.mod": "module github.com/example/snapshot-test

go 1.21
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "language": "go",
    "version": 1
  },
  "tooling": {
    "packageManager": "go",
    "linter": "golangci-lint",
    "formatter": "gofmt",
    "buildTool": "go",
    "testRunner": "go test"
  }
}",
  "main.go": "package main

import "fmt"

func main() {
	fmt.Println("Hello, world!")
}
",
}
`;

exports[`template snapshots > intermediate template output matches snapshot 1`] = `
{
  ".agnix.toml": "# agnix configuration — validates CLAUDE.md, hooks, skills, and agent configs.
# Reference: https://agent-sh.github.io/agnix/docs/configuration
#
# Harness runs this config via \`harness validate --agent-configs\` (hybrid mode):
#   - If the \`agnix\` binary is on PATH, harness shells out to it (385+ rules).
#   - Otherwise, harness runs a built-in fallback rule set covering the
#     highest-value checks (CLAUDE.md size, invalid hooks, unreachable skills).
# Install agnix for the full rule catalogue: \`cargo install agnix-cli\`.

target = "claude-code"
strict = false
max_files = 10000
locale = "en"

[rules]
disabled_rules = []
",
  ".gitignore": "node_modules/
dist/
.env
.env.local
*.log
coverage/
.turbo/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test — A project using Harness Engineering practices (intermediate adoption level).

## Documentation

- Main docs: \`docs/\`
- Architecture decisions: \`docs/architecture.md\`

## Source Code

- Entry point: \`src/index.ts\`

## Architecture

See \`docs/architecture.md\` for architectural decisions.
",
  "docs/changes/.gitkeep": "",
  "docs/index.md": "# snapshot-test Documentation

Welcome to the snapshot-test documentation.

## Getting Started

1. Install dependencies: \`npm install\`
2. Run checks: \`npx harness validate\`
3. Start development

## Architecture

See [architecture.md](./architecture.md) for architectural decisions.
",
  "docs/principles.md": "# snapshot-test Principles

## Code Quality
- TODO: Define your code quality principles

## Architecture
- TODO: Define your architectural principles

## Testing
- TODO: Define your testing approach

## Design
- TODO: Define your design principles
",
  "eslint.config.mjs": "import harnessPlugin from '@harness-engineering/eslint-plugin';

export default [
  harnessPlugin.configs.recommended,
  {
    rules: {
      '@harness-engineering/no-circular-deps': 'error',
      '@harness-engineering/no-forbidden-imports': 'error',
      '@harness-engineering/no-layer-violation': 'error',
    },
  },
];
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "layers": [
    {
      "name": "types",
      "pattern": "src/types/**",
      "allowedDependencies": []
    },
    {
      "name": "domain",
      "pattern": "src/domain/**",
      "allowedDependencies": [
        "types"
      ]
    },
    {
      "name": "services",
      "pattern": "src/services/**",
      "allowedDependencies": [
        "types",
        "domain"
      ]
    },
    {
      "name": "api",
      "pattern": "src/api/**",
      "allowedDependencies": [
        "types",
        "domain",
        "services"
      ]
    }
  ],
  "forbiddenImports": [
    {
      "from": "src/types/**",
      "disallow": [
        "src/services/**",
        "src/api/**"
      ],
      "message": "Types layer cannot import from services or API"
    }
  ],
  "boundaries": {
    "requireSchema": [
      "src/api/**"
    ]
  },
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "level": "intermediate",
    "version": 1
  }
}",
  "package.json": "{
  "name": "snapshot-test",
  "version": "1.0.0",
  "type": "module",
  "scripts": {
    "build": "tsc",
    "lint": "eslint src",
    "harness:validate": "harness validate",
    "harness:check-deps": "harness check-deps",
    "harness:check-docs": "harness check-docs"
  },
  "dependencies": {},
  "devDependencies": {
    "@harness-engineering/cli": "^0.1.0",
    "@harness-engineering/eslint-plugin": "^0.1.0",
    "eslint": "^9.0.0",
    "typescript": "^5.0.0"
  }
}",
  "src/domain/.gitkeep": "",
  "src/services/.gitkeep": "",
  "src/types/.gitkeep": "",
}
`;

exports[`template snapshots > java-base template output matches snapshot 1`] = `
{
  ".gitignore": "target/
*.class
*.jar
*.war
.env
.env.local
*.log

# IDE
.idea/
.vscode/
*.iml
.classpath
.project
.settings/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test -- A Java project managed with Harness Engineering practices.

## Language & Tooling

- **Language:** Java 17
- **Build tool:** Maven
- **Linter:** Checkstyle
- **Test runner:** JUnit 5
- **Group ID:** com.example.snapshottest

## Directory Structure

- \`src/main/java/\` -- Application source code
- \`src/test/java/\` -- Test files (JUnit 5)
- \`pom.xml\` -- Maven project configuration
- \`checkstyle.xml\` -- Code style rules

## Conventions

- Follow Google Java Style Guide (Checkstyle enforced)
- Use Java 17 language features
- Tests live in \`src/test/java/\` mirroring \`src/main/java/\` structure
- Use JUnit 5 assertions and lifecycle annotations
- Prefer dependency injection over static methods

## Harness Skills

- Use \`harness-brainstorming\` for design exploration
- Use \`harness-planning\` to break features into atomic tasks
- Use \`harness-execution\` to implement tasks with TDD
- Refer to \`harness.config.json\` for project tooling configuration
",
  "checkstyle.xml": "<?xml version="1.0"?>
<!DOCTYPE module PUBLIC
  "-//Checkstyle//DTD Checkstyle Configuration 1.3//EN"
  "https://checkstyle.org/dtds/configuration_1_3.dtd">
<module name="Checker">
  <property name="charset" value="UTF-8"/>
  <module name="TreeWalker">
    <module name="WhitespaceAround"/>
    <module name="NeedBraces"/>
    <module name="LeftCurly"/>
    <module name="RightCurly"/>
    <module name="EmptyBlock"/>
    <module name="AvoidStarImport"/>
    <module name="UnusedImports"/>
  </module>
  <module name="FileLength">
    <property name="max" value="500"/>
  </module>
  <module name="NewlineAtEndOfFile"/>
</module>
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "language": "java",
    "version": 1
  },
  "tooling": {
    "packageManager": "maven",
    "linter": "checkstyle",
    "buildTool": "maven",
    "testRunner": "junit"
  }
}",
  "pom.xml": "<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example.snapshottest</groupId>
  <artifactId>snapshot-test</artifactId>
  <version>0.1.0</version>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
",
  "src/main/java/App.java": "public class App {
    public static void main(String[] args) {
        System.out.println("Hello, world!");
    }
}
",
}
`;

exports[`template snapshots > nestjs overlay with basic level matches snapshot 1`] = `
{
  ".agnix.toml": "# agnix configuration — validates CLAUDE.md, hooks, skills, and agent configs.
# Reference: https://agent-sh.github.io/agnix/docs/configuration
#
# Harness runs this config via \`harness validate --agent-configs\` (hybrid mode):
#   - If the \`agnix\` binary is on PATH, harness shells out to it (385+ rules).
#   - Otherwise, harness runs a built-in fallback rule set covering the
#     highest-value checks (CLAUDE.md size, invalid hooks, unreachable skills).
# Install agnix for the full rule catalogue: \`cargo install agnix-cli\`.

target = "claude-code"
strict = false
max_files = 10000
locale = "en"

[rules]
disabled_rules = []
",
  ".gitignore": "node_modules/
dist/
.env
.env.local
*.log
coverage/
.turbo/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test — A project using Harness Engineering practices (basic adoption level).

## Documentation

- Main docs: \`docs/\`
- Architecture decisions: \`docs/architecture.md\`

## Source Code

- Entry point: \`src/index.ts\`

## Architecture

See \`docs/architecture.md\` for architectural decisions.
",
  "docs/index.md": "# snapshot-test Documentation

Welcome to the snapshot-test documentation.

## Getting Started

1. Install dependencies: \`npm install\`
2. Run checks: \`npx harness validate\`
3. Start development

## Architecture

See [architecture.md](./architecture.md) for architectural decisions.
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "layers": [
    {
      "name": "types",
      "pattern": "src/types/**",
      "allowedDependencies": []
    },
    {
      "name": "domain",
      "pattern": "src/domain/**",
      "allowedDependencies": [
        "types"
      ]
    },
    {
      "name": "services",
      "pattern": "src/services/**",
      "allowedDependencies": [
        "types",
        "domain"
      ]
    },
    {
      "name": "api",
      "pattern": "src/api/**",
      "allowedDependencies": [
        "types",
        "domain",
        "services"
      ]
    }
  ],
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "level": "basic",
    "version": 1
  }
}",
  "nest-cli.json": "{
  "$schema": "https://json.schemastore.org/nest-cli",
  "collection": "@nestjs/schematics",
  "sourceRoot": "src"
}
",
  "package.json": "{
  "name": "snapshot-test",
  "version": "1.0.0",
  "type": "module",
  "scripts": {
    "build": "nest build",
    "harness:validate": "harness validate",
    "harness:check-deps": "harness check-deps",
    "dev": "nest start --watch",
    "start": "node dist/main.js"
  },
  "dependencies": {
    "@nestjs/common": "^10.0.0",
    "@nestjs/core": "^10.0.0",
    "@nestjs/platform-express": "^10.0.0",
    "reflect-metadata": "^0.2.0",
    "rxjs": "^7.0.0"
  },
  "devDependencies": {
    "@harness-engineering/cli": "^0.1.0",
    "typescript": "^5.0.0",
    "@nestjs/cli": "^10.0.0"
  }
}",
  "src/app.module.ts": "import { Module } from '@nestjs/common';

@Module({
  imports: [],
  controllers: [],
  providers: [],
})
export class AppModule {}
",
  "src/index.ts": "export {};
",
  "src/lib/.gitkeep": "",
  "src/main.ts": "import { NestFactory } from '@nestjs/core';
import { AppModule } from './app.module';

async function bootstrap() {
  const app = await NestFactory.create(AppModule);
  const port = process.env.PORT || 3000;
  await app.listen(port);
  console.log(\`Application running on port \${port}\`);
}

bootstrap();
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2022",
    "module": "Node16",
    "moduleResolution": "Node16",
    "outDir": "dist",
    "rootDir": "src",
    "strict": true,
    "esModuleInterop": true,
    "declaration": true
  },
  "include": ["src"]
}
",
}
`;

exports[`template snapshots > python-base template output matches snapshot 1`] = `
{
  ".gitignore": "__pycache__/
*.py[cod]
*$py.class
.venv/
venv/
env/
.env
.env.local
dist/
build/
*.egg-info/
.pytest_cache/
.ruff_cache/
.mypy_cache/
*.log
",
  ".python-version": "3.10
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test -- A Python project managed with Harness Engineering practices.

## Language & Tooling

- **Language:** Python (>=3.10)
- **Linter/Formatter:** Ruff
- **Test runner:** pytest
- **Package manager:** pip

## Directory Structure

- \`src/\` -- Application source code
- \`tests/\` -- Test files (pytest)
- \`pyproject.toml\` -- Project metadata and dependencies

## Conventions

- Follow PEP 8 style (enforced by Ruff)
- Use type hints for function signatures
- Tests live in \`tests/\` and mirror \`src/\` structure
- Import sorting managed by Ruff (isort rules)

## Harness Skills

- Use \`harness-brainstorming\` for design exploration
- Use \`harness-planning\` to break features into atomic tasks
- Use \`harness-execution\` to implement tasks with TDD
- Refer to \`harness.config.json\` for project tooling configuration
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "language": "python",
    "version": 1
  },
  "tooling": {
    "packageManager": "pip",
    "linter": "ruff",
    "formatter": "ruff",
    "testRunner": "pytest"
  }
}",
  "pyproject.toml": "[project]
name = "snapshot-test"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
",
  "ruff.toml": "line-length = 88
target-version = "py310"

[lint]
select = ["E", "F", "I", "N", "W", "UP"]
",
  "src/__init__.py": "",
}
`;

exports[`template snapshots > react-vite overlay with basic level matches snapshot 1`] = `
{
  ".agnix.toml": "# agnix configuration — validates CLAUDE.md, hooks, skills, and agent configs.
# Reference: https://agent-sh.github.io/agnix/docs/configuration
#
# Harness runs this config via \`harness validate --agent-configs\` (hybrid mode):
#   - If the \`agnix\` binary is on PATH, harness shells out to it (385+ rules).
#   - Otherwise, harness runs a built-in fallback rule set covering the
#     highest-value checks (CLAUDE.md size, invalid hooks, unreachable skills).
# Install agnix for the full rule catalogue: \`cargo install agnix-cli\`.

target = "claude-code"
strict = false
max_files = 10000
locale = "en"

[rules]
disabled_rules = []
",
  ".gitignore": "node_modules/
dist/
.env
.env.local
*.log
coverage/
.turbo/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test — A project using Harness Engineering practices (basic adoption level).

## Documentation

- Main docs: \`docs/\`
- Architecture decisions: \`docs/architecture.md\`

## Source Code

- Entry point: \`src/index.ts\`

## Architecture

See \`docs/architecture.md\` for architectural decisions.
",
  "docs/index.md": "# snapshot-test Documentation

Welcome to the snapshot-test documentation.

## Getting Started

1. Install dependencies: \`npm install\`
2. Run checks: \`npx harness validate\`
3. Start development

## Architecture

See [architecture.md](./architecture.md) for architectural decisions.
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "layers": [
    {
      "name": "types",
      "pattern": "src/types/**",
      "allowedDependencies": []
    },
    {
      "name": "domain",
      "pattern": "src/domain/**",
      "allowedDependencies": [
        "types"
      ]
    },
    {
      "name": "services",
      "pattern": "src/services/**",
      "allowedDependencies": [
        "types",
        "domain"
      ]
    },
    {
      "name": "api",
      "pattern": "src/api/**",
      "allowedDependencies": [
        "types",
        "domain",
        "services"
      ]
    }
  ],
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "level": "basic",
    "version": 1
  }
}",
  "index.html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Harness Engineering App</title>
  </head>
  <body>
    <div id="root"></div>
    <script type="module" src="/src/main.tsx"></script>
  </body>
</html>
",
  "package.json": "{
  "name": "snapshot-test",
  "version": "1.0.0",
  "type": "module",
  "scripts": {
    "build": "tsc && vite build",
    "harness:validate": "harness validate",
    "harness:check-deps": "harness check-deps",
    "dev": "vite",
    "preview": "vite preview"
  },
  "dependencies": {
    "react": "^18.0.0",
    "react-dom": "^18.0.0"
  },
  "devDependencies": {
    "@harness-engineering/cli": "^0.1.0",
    "typescript": "^5.0.0",
    "@types/react": "^18.0.0",
    "@types/react-dom": "^18.0.0",
    "@vitejs/plugin-react": "^4.0.0",
    "vite": "^5.0.0"
  }
}",
  "src/App.tsx": "export default function App() {
  return (
    <main>
      <h1>Welcome to your Harness Engineering project</h1>
    </main>
  );
}
",
  "src/index.ts": "export {};
",
  "src/lib/.gitkeep": "",
  "src/main.tsx": "import React from 'react';
import ReactDOM from 'react-dom/client';
import App from './App';

ReactDOM.createRoot(document.getElementById('root')!).render(
  <React.StrictMode>
    <App />
  </React.StrictMode>
);
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2022",
    "module": "Node16",
    "moduleResolution": "Node16",
    "outDir": "dist",
    "rootDir": "src",
    "strict": true,
    "esModuleInterop": true,
    "declaration": true
  },
  "include": ["src"]
}
",
  "vite.config.ts": "import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';

export default defineConfig({
  plugins: [react()],
});
",
}
`;

exports[`template snapshots > rust-base template output matches snapshot 1`] = `
{
  ".gitignore": "/target/
.env
.env.local
*.log

# IDE
.idea/
.vscode/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test -- A Rust project managed with Harness Engineering practices.

## Language & Tooling

- **Language:** Rust (edition 2021)
- **Package manager:** Cargo
- **Linter:** Clippy
- **Formatter:** rustfmt
- **Test runner:** cargo test

## Directory Structure

- \`src/main.rs\` -- Application entry point
- \`src/lib.rs\` -- Library root (when applicable)
- \`Cargo.toml\` -- Package manifest and dependencies
- \`tests/\` -- Integration tests

## Conventions

- Follow Rust API guidelines
- Use \`rustfmt\` for formatting
- Run \`cargo clippy\` before committing
- Tests: unit tests in \`#[cfg(test)]\` modules, integration tests in \`tests/\`
- Error handling: use \`Result<T, E>\` and the \`?\` operator, avoid \`.unwrap()\` in production code

## Harness Skills

- Use \`harness-brainstorming\` for design exploration
- Use \`harness-planning\` to break features into atomic tasks
- Use \`harness-execution\` to implement tasks with TDD
- Refer to \`harness.config.json\` for project tooling configuration
",
  "Cargo.toml": "[package]
name = "snapshot-test"
version = "0.1.0"
edition = "2021"

[dependencies]
",
  "clippy.toml": "cognitive-complexity-threshold = 25
too-many-arguments-threshold = 7
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "language": "rust",
    "version": 1
  },
  "tooling": {
    "packageManager": "cargo",
    "linter": "clippy",
    "formatter": "rustfmt",
    "buildTool": "cargo",
    "testRunner": "cargo test"
  }
}",
  "src/main.rs": "fn main() {
    println!("Hello, world!");
}
",
}
`;

exports[`template snapshots > spring-boot overlay with java-base matches snapshot 1`] = `
{
  ".gitignore": "target/
*.class
*.jar
*.war
.env
.env.local
*.log

# IDE
.idea/
.vscode/
*.iml
.classpath
.project
.settings/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test -- A Java project managed with Harness Engineering practices.

## Language & Tooling

- **Language:** Java 17
- **Build tool:** Maven
- **Linter:** Checkstyle
- **Test runner:** JUnit 5
- **Group ID:** com.example.snapshottest

## Directory Structure

- \`src/main/java/\` -- Application source code
- \`src/test/java/\` -- Test files (JUnit 5)
- \`pom.xml\` -- Maven project configuration
- \`checkstyle.xml\` -- Code style rules

## Conventions

- Follow Google Java Style Guide (Checkstyle enforced)
- Use Java 17 language features
- Tests live in \`src/test/java/\` mirroring \`src/main/java/\` structure
- Use JUnit 5 assertions and lifecycle annotations
- Prefer dependency injection over static methods

## Harness Skills

- Use \`harness-brainstorming\` for design exploration
- Use \`harness-planning\` to break features into atomic tasks
- Use \`harness-execution\` to implement tasks with TDD
- Refer to \`harness.config.json\` for project tooling configuration
",
  "checkstyle.xml": "<?xml version="1.0"?>
<!DOCTYPE module PUBLIC
  "-//Checkstyle//DTD Checkstyle Configuration 1.3//EN"
  "https://checkstyle.org/dtds/configuration_1_3.dtd">
<module name="Checker">
  <property name="charset" value="UTF-8"/>
  <module name="TreeWalker">
    <module name="WhitespaceAround"/>
    <module name="NeedBraces"/>
    <module name="LeftCurly"/>
    <module name="RightCurly"/>
    <module name="EmptyBlock"/>
    <module name="AvoidStarImport"/>
    <module name="UnusedImports"/>
  </module>
  <module name="FileLength">
    <property name="max" value="500"/>
  </module>
  <module name="NewlineAtEndOfFile"/>
</module>
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "language": "java",
    "version": 1
  },
  "tooling": {
    "packageManager": "maven",
    "linter": "checkstyle",
    "buildTool": "maven",
    "testRunner": "junit"
  }
}",
  "pom.xml": "<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.0</version>
  </parent>

  <groupId>com.example.snapshottest</groupId>
  <artifactId>snapshot-test</artifactId>
  <version>0.1.0</version>
  <packaging>jar</packaging>

  <properties>
    <java.version>17</java.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
",
  "src/main/java/App.java": "public class App {
    public static void main(String[] args) {
        System.out.println("Hello, world!");
    }
}
",
  "src/main/java/Application.java": "package com.example.snapshottest;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.RestController;

@SpringBootApplication
@RestController
public class Application {
    public static void main(String[] args) {
        SpringApplication.run(Application.class, args);
    }

    @GetMapping("/")
    public String root() {
        return "Hello, world!";
    }
}
",
}
`;

exports[`template snapshots > vue overlay with basic level matches snapshot 1`] = `
{
  ".agnix.toml": "# agnix configuration — validates CLAUDE.md, hooks, skills, and agent configs.
# Reference: https://agent-sh.github.io/agnix/docs/configuration
#
# Harness runs this config via \`harness validate --agent-configs\` (hybrid mode):
#   - If the \`agnix\` binary is on PATH, harness shells out to it (385+ rules).
#   - Otherwise, harness runs a built-in fallback rule set covering the
#     highest-value checks (CLAUDE.md size, invalid hooks, unreachable skills).
# Install agnix for the full rule catalogue: \`cargo install agnix-cli\`.

target = "claude-code"
strict = false
max_files = 10000
locale = "en"

[rules]
disabled_rules = []
",
  ".gitignore": "node_modules/
dist/
.env
.env.local
*.log
coverage/
.turbo/
",
  "AGENTS.md": "# snapshot-test Knowledge Map

## About This Project

snapshot-test — A project using Harness Engineering practices (basic adoption level).

## Documentation

- Main docs: \`docs/\`
- Architecture decisions: \`docs/architecture.md\`

## Source Code

- Entry point: \`src/index.ts\`

## Architecture

See \`docs/architecture.md\` for architectural decisions.
",
  "docs/index.md": "# snapshot-test Documentation

Welcome to the snapshot-test documentation.

## Getting Started

1. Install dependencies: \`npm install\`
2. Run checks: \`npx harness validate\`
3. Start development

## Architecture

See [architecture.md](./architecture.md) for architectural decisions.
",
  "harness.config.json": "{
  "version": 1,
  "name": "snapshot-test",
  "layers": [
    {
      "name": "types",
      "pattern": "src/types/**",
      "allowedDependencies": []
    },
    {
      "name": "domain",
      "pattern": "src/domain/**",
      "allowedDependencies": [
        "types"
      ]
    },
    {
      "name": "services",
      "pattern": "src/services/**",
      "allowedDependencies": [
        "types",
        "domain"
      ]
    },
    {
      "name": "api",
      "pattern": "src/api/**",
      "allowedDependencies": [
        "types",
        "domain",
        "services"
      ]
    }
  ],
  "agentsMapPath": "./AGENTS.md",
  "docsDir": "./docs",
  "template": {
    "level": "basic",
    "version": 1
  }
}",
  "index.html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Harness Engineering App</title>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>
",
  "package.json": "{
  "name": "snapshot-test",
  "version": "1.0.0",
  "type": "module",
  "scripts": {
    "build": "vue-tsc && vite build",
    "harness:validate": "harness validate",
    "harness:check-deps": "harness check-deps",
    "dev": "vite",
    "preview": "vite preview"
  },
  "dependencies": {
    "vue": "^3.0.0"
  },
  "devDependencies": {
    "@harness-engineering/cli": "^0.1.0",
    "typescript": "^5.0.0",
    "@vitejs/plugin-vue": "^5.0.0",
    "vue-tsc": "^2.0.0",
    "vite": "^5.0.0"
  }
}",
  "src/App.vue": "<template>
  <main>
    <h1>Welcome to your Harness Engineering project</h1>
  </main>
</template>

<script setup lang="ts"></script>
",
  "src/index.ts": "export {};
",
  "src/lib/.gitkeep": "",
  "src/main.ts": "import { createApp } from 'vue';
import App from './App.vue';

createApp(App).mount('#app');
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2022",
    "module": "Node16",
    "moduleResolution": "Node16",
    "outDir": "dist",
    "rootDir": "src",
    "strict": true,
    "esModuleInterop": true,
    "declaration": true
  },
  "include": ["src"]
}
",
  "vite.config.ts": "import { defineConfig } from 'vite';
import vue from '@vitejs/plugin-vue';

export default defineConfig({
  plugins: [vue()],
});
",
}
`;
